--- a/.packwizignore
+++ b/.packwizignore
@@ -1,5 +1,8 @@
 # .packwizignore follows the same format as .gitignore, and can be used to exclude unwanted files from pack exports
 # See https://git-scm.com/docs/gitignore
 
-# Exclude README
+# Exclude GitHub, Unsup, and data files:
 /README.md
+/unsup.ini
+/com.unascribed.unsup.json
+/data
