update iris config

--- a/config/iris.properties
+++ b/config/iris.properties
@@ -5,4 +5,4 @@ disableUpdateMessage=false
 enableDebugOptions=false
 enableShaders=true
 maxShadowRenderDistance=32
-shaderPack=ComplementaryReimagined_r5.3 + EuphoriaPatches_1.4.1.zip
+shaderPack=CompReimi_r53_EuphiPatch_141.zip
