update entity plaques

--- a/config/mobplaques-client.toml
+++ b/config/mobplaques-client.toml
@@ -7,7 +7,7 @@ allow_rendering = true
 	render_below_name_tag = false
 	#Show a black background box behind plaques. Disabled by default as it doesn't work with shaders.
 	#Default Value: true
-	render_background = true
+	render_background = false
 	#Entities blacklisted from showing any plaques.
 	#Format for every entry is "<namespace>:<path>". Tags are supported, must be in the format of "#<namespace>:<path>". Namespace may be omitted to use "minecraft" by default. May use asterisk as wildcard parameter via pattern matching, e.g. "minecraft:*_shulker_box" to match all shulker boxes no matter of color. Begin an entry with "!" to make sure it is excluded, useful e.g. when it has already been matched by another pattern.
 	#Default Value: [minecraft:armor_stand]
@@ -24,11 +24,11 @@ allow_rendering = true
 	#Height offset from default position.
 	#Default Value: 0
 	#Range: > -2147483648
-	offset_height = 20
+	offset_height = 0
 	#Distance to the mob at which plaques will still be visible. The distance is halved when the mob is crouching.
 	#Default Value: 96
 	#Range: > 0
-	max_render_distance = 16
+	max_render_distance = 30
 	#Show plaques from mobs obstructed by walls the player cannot see through, similar to the nameplates of other players.
 	#Default Value: true
 	behind_walls = false
@@ -43,17 +43,17 @@ allow_rendering = true
 	#Selectors for choosing mobs to render plaques for.
 	#Default Value: [minecraft:all]
 	#Allowed Values: minecraft:all, minecraft:tamed, minecraft:tamed_only_owner, minecraft:player, minecraft:monster, minecraft:boss, minecraft:mount
-	mob_selectors = ["minecraft:all"]
+	mob_selectors = ["minecraft:all", "minecraft:tamed_only_owner"]
 	#Show plaques for the entity picked by the crosshair only.
 	#Default Value: false
 	picked_entity = false
 	#Custom scale for rendering plaques.
 	#Default Value: 0.5
 	#Range: 0.05 ~ 2.0
-	plaque_scale = 0.4
+	plaque_scale = 0.6
 	#Always render plaques with full brightness to be most visible, ignoring local lighting conditions.
 	#Default Value: true
-	full_brightness = true
+	full_brightness = false
 	#Hide all plaques when mob has full health.
 	#Default Value: false
 	hide_at_full_health = true
@@ -62,10 +62,10 @@ allow_rendering = true
 	#Allow for rendering this type of plaque.
 	allow_rendering = true
 	#Transition text colors depending on current percentage.
-	shift_colors = false
+	shift_colors = true
 	#Show current amount either as percentage or as absolute value.
 	#Allowed Values: ABSOLUTE, ABSOLUTE_WITH_MAX, RELATIVE
-	plaque_value = "RELATIVE"
+	plaque_value = "ABSOLUTE"
 
 [air]
 	#Allow for rendering this type of plaque.
