update rpack zip

--- a/unsup.ini
+++ b/unsup.ini
@@ -1,5 +1,6 @@
 version=1
-preset=minecraft
-
 source_format=packwiz
 source=https://raw.githubusercontent.com/Ifiht/Ithavollr/main/pack.toml
+
+preset=minecraft
+force_env=client
